--- a/web/author_display/webapp/index.html
+++ b/web/author_display/webapp/index.html
@@ -7,7 +7,7 @@
 		<title>Final task</title>
 		<script
 				id="sap-ui-bootstrap"
-				src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+				src="../../resources/sap-ui-core.js"
 				data-sap-ui-theme="sap_belize"
 				data-sap-ui-libs="sap.m"
 				data-sap-ui-bindingSyntax="complex"
