--- a/web/author_display/webapp/index.html
+++ b/web/author_display/webapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
 	<head>
+		<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
